--- a/labs/basic/b3.adoc
+++ b/labs/basic/b3.adoc
@@ -1,5 +1,9 @@
 = Lab: Why This Third-Party App Fails (SCC & Non-Root Realities)
 :labid: LAB-B3A
+:cis-summary: "Restrict granting of privileged SCCs like anyuid—prefer fixing images to run under restricted defaults."
+:mitre-summary: "Prevents container privilege escalation by denying root/privileged assumptions and discouraging anyuid exceptions."
+:audit-evidence: "Port 80 start and runAsUser=0 fail under restricted; after anyuid grant pod runs as UID 0 illustrating risky exception."
+:cis-mitre-codes: '{"cisMapping":{"primary":["5.2.6","5.2.10"],"related":["5.2.5","5.2.1"]},"mitre":{"techniques":["T1611"],"tactics":["TA0004"],"mitigations":["M1048","M1026"]}}'
 :toc:
 :sectnums:
 :icons: font
@@ -8,6 +12,7 @@
 Diagnose why an image that runs fine elsewhere fails on OpenShift, and learn correct remediation (rebuild image) instead of weakening security (granting anyuid).
 
 == Objective
+
 * Attempt to run a container binding privileged port 80 and observe failure
 * Attempt to force root (runAsUser=0) and see SCC block it
 * Grant anyuid and observe the container now runs as root on port 80
@@ -94,6 +99,7 @@ oc delete project b3-scc-demo --wait=false
 ----
 
 == Solutions / Controls
+
 * Restricted SCC dominance
 * Controlled anyuid exceptions with review
 * Image hardening pipelines (fail on USER root)
@@ -127,6 +133,7 @@ Can SELinux cause similar failures?:: Yes; rule out UID/perm design first, then 
 Granting anyuid because an image fails is like removing a seatbelt because it’s “too tight.” Fix the workload; keep the safety system.
 
 == Next Step Ideas
+
 * Add CI linting: warn on USER root
 * Inventory existing anyuid bindings
 
