--- a/labs/basic/b7.adoc
+++ b/labs/basic/b7.adoc
@@ -1,5 +1,9 @@
 = Lab: Logs Don’t Lie – Tracing Who Did What (Audit Forensics)
 :labid: LAB-B7
+:cis-summary: "Maintain comprehensive audit logging to record sensitive API actions (exec, port‑forward, RBAC changes)."
+:mitre-summary: "Prevents undetected misuse by capturing exec and port-forward activity for rapid escalation investigation."
+:audit-evidence: "jq filters extract exec and portforward entries with user, pod, namespace, commands, and source IPs for incident summary."
+:cis-mitre-codes: '{"cisMapping":{"primary":["3.2.1","3.2.2"],"related":[]},"mitre":{"techniques":["T1543"],"tactics":["TA0003","TA0004"],"mitigations":["M1026","M1047"]}}'
 :toc:
 :sectnums:
 :icons: font
@@ -8,6 +12,7 @@
 Parse audit logs to identify suspicious exec and port-forward events and build a concise incident report.
 
 == Objective
+
 * Locate exec & port-forward events
 * Attribute to identities
 * Summarize commands, source IPs, timing
@@ -17,6 +22,7 @@ Parse audit logs to identify suspicious exec and port-forward events and build a
 Audit logs are door swipe records for API actions. They reduce investigation time and support compliance evidence.
 
 == What it Solves
+
 * Reduces downtime in incident reconstruction
 * Prevents disputes over actions
 * Supports least privilege validation
@@ -89,6 +95,7 @@ jq 'select(.objectRef.subresource=="exec") | .requestObject.command' audit.json 
 ----
 
 == Solutions / Controls
+
 * Central log aggregation (immutability)
 * RHACS correlation with runtime
 * Least privilege RBAC
@@ -114,6 +121,7 @@ Does this replace runtime detection?:: No—complements container-level signals.
 Audit logs are a time machine—without them investigation is guesswork, not evidence.
 
 == Next Step Ideas
+
 * Daily exec counts per user summary
 * Correlate events with workload restarts
 * Integrate RHACS alerts into incident pipeline
