Update CIS-MITRE codes and summaries across multiple lab documents for accuracy and clarity

--- a/labs/basic/b1.adoc
+++ b/labs/basic/b1.adoc
@@ -3,7 +3,7 @@
 :cis-summary: "Run containers as non-root and avoid privileged/low ports to enforce least privilege."
 :mitre-summary: "Prevents container-to-host escalation by enforcing non-root execution and avoiding privileged port binds."
 :audit-evidence: "Root-based httpd on port 80 fails; UBI httpd on 8080 runs with random non-root UID and accessible route."
-:cis-mitre-codes: '{"cisMapping":{"primary":["5.2.6"],"related":["5.2.5"]},"mitre":{"techniques":["T1611"],"tactics":["TA0004"],"mitigations":["M1026","M1048"]}}'
+:cis-mitre-codes: '{"cisMapping":{"primary":["5.2.5","5.2.6"],"related":["5.2.1","5.2.10"]},"mitre":{"techniques":["T1611"],"tactics":["TA0004"],"mitigations":["M1026","M1048"]}}'
 :toc:
 :sectnums:
 :icons: font
@@ -129,4 +129,3 @@ OpenShift’s model is “secure-by-default through skepticism.” It behaves li
 * Add pipeline policy: reject Dockerfiles ending with USER 0
 * Integrate cosign + RHACS to enforce signature presence
 * Track KPIs: % non-root, % digest-pinned, mean time to remediate root exceptions
-
