--- a/labs/basic/b4.adoc
+++ b/labs/basic/b4.adoc
@@ -3,7 +3,7 @@
 :cis-summary: "Apply NetworkPolicies so namespaces default deny and only intended pod traffic is allowed."
 :mitre-summary: "Prevents lateral movement and internal scanning via default deny plus narrowly scoped allow rules."
 :audit-evidence: "Default connectivity works; default-deny blocks both clients; allow policy restores access only for labeled allowed client (200 vs timeout)."
-:cis-mitre-codes: '{"cisMapping":{"primary":["5.3.2"],"related":["5.3.1"]},"mitre":{"techniques":["T1046"],"tactics":["TA0007"],"mitigations":["M1030","M1042"]}}'
+:cis-mitre-codes: '{"cisMapping":{"primary":["5.3.2"]},"mitre":{"techniques":["T1046"],"tactics":["TA0007"],"mitigations":["M1030","M1042"]}}'
 :toc:
 :sectnums:
 :icons: font
